# BindingAL

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-sagemaker.txt  requirements.txt
bindingal/data/: __init__.py  dataset.py
bindingal/embeds/: __init__.py  extractor.py
bindingal/models/: __init__.py  cross_attn.py  mlp.py
bindingal/strategies/: __init__.py  base.py  density.py  diversity.py  qbc.py  uncertainty.py
result_scripts/: 01_build_concat_cache_umap.py  02_embedding_geometry_supervised.py  03_al_concat_rf_mlp_pool.py  04_plot_mlp_accuracy_from_csv.py  05_al_salience_weighted_interaction.py  06_al_interaction_badge.py  07_al_interaction_exhaustive_no_badge.py  README.md  interaction_features.py  paths.py
scripts/: extract.py  run_sagemaker.py  run_sagemaker_train.py  train.py
utils/: distributed.py
