[project]
name = "bindingal"
version = "0.1.0"
description = "A scalable active learning framework for biomolecular binding prediction."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "BindingAL" }]

dependencies = [
    "torch>=2.1",
    "transformers>=4.38",
    "tokenizers>=0.15",
    "pandas>=2.0",
    "numpy>=1.24",
    "tqdm>=4.66",
]

[project.urls]
Homepage = "https://github.com/cmu-compbio-al/BindingAL"

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bindingal"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C90", # mccabe
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"