[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "bindingal"
version = "0.1.0"
description = "A scalable active learning framework for biomolecular binding prediction."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "BindingAL contributors" }
]

[project.urls]
Homepage = "https://github.com/cmu-compbio-al/BindingAL"

[tool.setuptools]
packages = ["bindingal"]